--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         // JavaScript to handle cleanup and feedback submission
         document.addEventListener("DOMContentLoaded", () => {
             const cleanupStatus = document.getElementById("cleanupStatus");
-            const dbName = "YourDatabaseName"; // Replace with your database name
+            const dbName = "BrowsingDataDB"; // Replace with your database name
 
             // Delete specific IndexedDB database
             const request = indexedDB.deleteDatabase(dbName);
