--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="logo.png" alt="Inertia Breaker Logo" class="logo" />
+            <img src="interia-break96.png" alt="Inertia Breaker Logo" class="logo" />
             <h1>Thank You for Using Inertia Breaker</h1>
         </div>
         <p class="message">
