--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Thank You for Using Inertia Breaker</h1>
         </div>
         <p class="message">
-            We're sorry to see you go. If there's anything we can do to improve, please let us know. We’re constantly working to make your experience better!
+            We're sorry to see you go. We’re constantly working to make your experience better!
         </p>
         <div class="cleanup">
             <h2>Cleaning Up...</h2>
